feat: add test for inscriptionServiceImpl, add exam entities.